libycp/testsuite/tests/statements/Switch6.ycp
{
	integer res = 0;

	switch (res-1) {
		case res+2: res = 0; break;	// error: non-constant label
		default: res = -1; break;
	}
	return res;
}
